k8s/service.yaml
apiVersion: v1  # why is it v1?
kind: Service
metadata:
  name: chantel-api
  labels:
    app: chantel-api
spec: 
  selector: 
    app: chantel-api
  ports:
      - protocol: TCP
        port: 8080
        targetPort: 8080
      - protocol: TCP
        port: 1234
        targetPort: 1234
---
apiVersion: v1
kind: Service
metadata:
  name: chantel-webapp
  labels:
    app: chantel-webapp
spec: 
  selector: 
    app: chantel-webapp
  ports:
      - protocol: TCP
        port: 80
        targetPort: 80
